ctor-missing-parent-argument: Don't warn when base class is in system header

and doesn't accept any QObject in any ctor.
BUG: 384926